# fee-manager.rs

./: .envrc  .gitignore  Cargo.toml  config.yaml  flake.nix
.github/: docker-compose.yml
.github/workflows/: general.yaml
migrations/: 20231019203424_init.down.sql  20231019203424_init.up.sql
nix/: default.nix  formatter.nix  package.nix  pre-commit.nix  shell.nix
src/: config.rs  configuration.rs  lib.rs  main.rs
src/domain/: mod.rs  proposer.rs
src/domain/addresses/: bls.rs  execution.rs  mod.rs
src/domain/execution_config/: v1.rs  v2.rs
src/routes/: health.rs  mod.rs  proposer.rs
tests/: health.rs
