[package]
name = "fee-manager"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fee-manager"

[dependencies]
axum = "0.6"
hyper = "0.14"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls","migrate", "postgres", "chrono", "macros"] }

hex = { version = "0.4", features = ["serde"] }
config = "0.13"
anyhow = "1.0"

serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "3.3"

tokio = { version = "1.32", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version= "2.4", features = ["serde"] }
rust_decimal = "1.32.0"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
